# citadel

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
citadel_cli/: __init__.py  main.py
